--- a/src/solvers/amr_waveprop/Makefile.am
+++ b/src/solvers/amr_waveprop/Makefile.am
@@ -24,11 +24,11 @@ src_solvers_amr_waveprop_libwaveprop_la_CPPFLAGS = \
 
 lib_LTLIBRARIES += src/solvers/amr_waveprop/libwaveprop.la
 
-src_libwaveprop_la_SOURCES = \
+src_solvers_amr_waveprop_libwaveprop_la_SOURCES = \
  $(libwaveprop_internal_headers) \
  $(libwaveprop_compiled_sources)
 
-LDADD += @top_builddir@/src/libwaveprop.la @FCLAW_P4EST_LDADD@ @FCLAW_SC_LDADD@
+LDADD += @top_builddir@/src/solvers/amr_waveprop/libwaveprop.la @FCLAW_P4EST_LDADD@ @FCLAW_SC_LDADD@
 
 nodist_include_HEADERS += $(libwaveprop_generated_headers)
 include_HEADERS += $(libwaveprop_installed_headers)
