--- a/applications/advection/2d/swirl/Makefile.am
+++ b/applications/advection/2d/swirl/Makefile.am
@@ -3,13 +3,6 @@
 # A single hash comment like this one WILL show up in the Makefile.
 ## A double hash comment like this one will NOT be copied to the Makefile.
 
-## We should probably include .am files only from the toplevel Makefile.am,
-## and not recursively as is done here.
-## include src/solvers/amr_waveprop/Makefile.am
-
-## We need to find a solution about how to compile the waveprop files without
-## creating a name conflict with other solvers.
-
 bin_PROGRAMS += applications/advection/2d/swirl/swirl
 
 applications_advection_2d_swirl_swirl_SOURCES = \
@@ -29,4 +22,5 @@ applications_advection_2d_swirl_swirl_SOURCES = \
 applications_advection_2d_swirl_swirl_CPPFLAGS = \
 	$(AM_CPPFLAGS) -I@top_srcdir@/src/solvers/amr_waveprop
 
-applications_advection_2d_swirl_swirl_LDADD = @top_builddir@/local/lib/libwaveprop.la $(LDADD)
+applications_advection_2d_swirl_swirl_LDADD = \
+	@top_builddir@/src/solvers/amr_waveprop/libwaveprop.la $(LDADD)
