--- a/applications/dummy/Makefile.am
+++ b/applications/dummy/Makefile.am
@@ -2,5 +2,6 @@
 
 bin_PROGRAMS += applications/dummy/fclaw2d_dummy
 
-applications_dummy_fclaw2d_dummy_SOURCES = applications/dummy/fclaw2d_dummy.c \
+applications_dummy_fclaw2d_dummy_SOURCES = \
+	applications/dummy/fclaw2d_dummy.c \
 	applications/dummy/ghost_twopatch.f
