--- a/src/solvers/amr_waveprop/Makefile.am
+++ b/src/solvers/amr_waveprop/Makefile.am
@@ -8,7 +8,11 @@
 ## been mentioned in bin_PROGRAMS for example.  Any variable used with +=
 ## must also first be initialized with = (usually to empty).
 
-libwaveprop_internal_headers = claw.i
+libwaveprop_generated_headers =
+libwaveprop_installed_headers =
+
+## TODO: there could be a name conflict with multiple claw.i files present
+libwaveprop_internal_headers = src/solvers/amr_waveprop/fortran_source/claw.i
 
 libwaveprop_compiled_sources = \
 	src/solvers/amr_waveprop/amr_waveprop.cpp \
@@ -19,18 +23,15 @@ libwaveprop_compiled_sources = \
 	src/solvers/amr_waveprop/fortran_source/step2.f \
 	src/solvers/amr_waveprop/fortran_source/ClawPatch2.f
 
-src_solvers_amr_waveprop_libwaveprop_la_CPPFLAGS = \
-	$(AM_CPPFLAGS) -I@top_srcdir@/src/solvers/amr_waveprop
-
 lib_LTLIBRARIES += src/solvers/amr_waveprop/libwaveprop.la
-
 src_solvers_amr_waveprop_libwaveprop_la_SOURCES = \
  $(libwaveprop_internal_headers) \
  $(libwaveprop_compiled_sources)
-
-LDADD += @top_builddir@/src/solvers/amr_waveprop/libwaveprop.la @FCLAW_P4EST_LDADD@ @FCLAW_SC_LDADD@
+src_solvers_amr_waveprop_libwaveprop_la_CPPFLAGS = \
+	$(AM_CPPFLAGS) -I@top_srcdir@/src/solvers/amr_waveprop
 
 nodist_include_HEADERS += $(libwaveprop_generated_headers)
 include_HEADERS += $(libwaveprop_installed_headers)
 
-AM_CPPFLAGS += -I@top_srcdir@/src @FCLAW_SC_CPPFLAGS@ @FCLAW_P4EST_CPPFLAGS@
+## We don't need to change global LDADD or AM_CPPFLAGS variables here.
+## This is only done in src/Makefile.am, which is special in this regard.
