--- a/Makefile.am
+++ b/Makefile.am
@@ -16,7 +16,8 @@ AM_CPPFLAGS =
 CLEANFILES =
 DISTCLEANFILES =
 EXTRA_DIST =
-LDADD = -L/usr/lib -lgfortran
+#LDADD = -L/usr/lib -lgfortran
+LDADD =
 LINT_CSOURCES =
 TESTS =
 bin_PROGRAMS =
