use lib_LTLIBRARIES for solver libraries;  LDADD for using library with swirl

--- a/Makefile.am
+++ b/Makefile.am
@@ -16,7 +16,7 @@ AM_CPPFLAGS =
 CLEANFILES =
 DISTCLEANFILES =
 EXTRA_DIST =
-LDADD = -L/usr/lib -lgfortran
+LDADD =
 LINT_CSOURCES =
 TESTS =
 bin_PROGRAMS =
