* Added build system support for the hemisphere example (added Makefile.am) * Made minor changes to hemisphere code (which isn't working...) * Changes to Makefile.am in swirl

--- a/applications/advection/2d/swirl/fclaw2d_defaults.ini
+++ b/applications/advection/2d/swirl/fclaw2d_defaults.ini
@@ -2,7 +2,7 @@
      mx = 8		  # mx_leaf
      my = 8              # my_leaf
 
-     serialout = F
+     serialout = T
 
      subcycle = F         # subcycle in time ( = T or F).
 
