--- a/Makefile.am
+++ b/Makefile.am
@@ -64,6 +64,7 @@ include applications/dummy/Makefile.am
 
 include src/solvers/amr_waveprop/Makefile.am
 include applications/advection/2d/swirl/Makefile.am
+include applications/advection/2d/hemisphere/Makefile.am
 # ------------------------------------------------------------------
 
 # revision control and ChangeLog
