Worked more solver library support

--- a/src/solvers/amr_waveprop/Makefile.am
+++ b/src/solvers/amr_waveprop/Makefile.am
@@ -13,6 +13,9 @@ libwaveprop_internal_headers = claw.i
 libwaveprop_compiled_sources = \
 	src/solvers/amr_waveprop/amr_waveprop.cpp \
 	src/solvers/amr_waveprop/fortran_source/limiter.f \
+	src/solvers/amr_waveprop/fortran_source/qinit.f \
+	src/solvers/amr_waveprop/fortran_source/b4step2.f \
+	src/solvers/amr_waveprop/fortran_source/setaux.f \
 	src/solvers/amr_waveprop/fortran_source/src2.f \
 	src/solvers/amr_waveprop/fortran_source/bc2.f \
 	src/solvers/amr_waveprop/fortran_source/flux2.f \
@@ -28,9 +31,9 @@ src_solvers_amr_waveprop_libwaveprop_la_SOURCES = \
  $(libwaveprop_internal_headers) \
  $(libwaveprop_compiled_sources)
 
-# LDADD += @top_builddir@/src/solvers/amr_waveprop/libwaveprop.la @FCLAW_P4EST_LDADD@ @FCLAW_SC_LDADD@
-
 nodist_include_HEADERS += $(libwaveprop_generated_headers)
 include_HEADERS += $(libwaveprop_installed_headers)
+
+# src_solvers_amr_waveprop_libwaveprop_la_LDADD = $(FLIBS)
 
 AM_CPPFLAGS += -I@top_srcdir@/src @FCLAW_SC_CPPFLAGS@ @FCLAW_P4EST_CPPFLAGS@
