--- a/applications/metric/2d/sphere/fclaw2d_defaults.ini
+++ b/applications/metric/2d/sphere/fclaw2d_defaults.ini
@@ -2,6 +2,8 @@
      mx = 8		  # mx_leaf
      my = 8             # my_leaf
 
+     serialout = T
+
      minlevel = 3         # Minimum level
      maxlevel = 6         # Maximum levels of refinement
      regrid_interval = 10  # Regrid every 'regrid_interval' time steps.
@@ -14,7 +16,7 @@
      use_fixed_dt = F     # Take a fixed time step
      initial_dt = 0.02   # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
-     desired_cfl = 0.9    # desired cfl
+     desired_cfl = 1.0    # desired cfl
 
      verbosity = 0        # verbose
 
