Minor changes to to hemisphere example

--- a/Makefile.apps
+++ b/Makefile.apps
@@ -16,3 +16,4 @@ include src/solvers/amr_waveprop/Makefile.am
 include applications/dummy/Makefile.am
 include applications/advection/2d/swirl/Makefile.am
 include applications/advection/2d/hemisphere/Makefile.am
+include applications/metric/2d/sphere/Makefile.am
