Turned off setial output

--- a/applications/advection/2d/swirl/fclaw2d_defaults.ini
+++ b/applications/advection/2d/swirl/fclaw2d_defaults.ini
@@ -2,7 +2,7 @@
      mx = 16		  # mx_leaf
      my = 16              # my_leaf
 
-     serialout = T
+     serialout = F
 
      subcycle = T         # subcycle in time ( = T or F).
 
