Reduce maximum level for faster execution time

--- a/applications/advection/2d/swirl/fclaw2d_defaults.ini
+++ b/applications/advection/2d/swirl/fclaw2d_defaults.ini
@@ -2,12 +2,12 @@
      mx = 16		  # mx_leaf
      my = 16              # my_leaf
 
-     serialout = F
+     serialout = T
 
      subcycle = T         # subcycle in time ( = T or F).
 
-     minlevel = 1         # Minimum level
-     maxlevel = 8         # Maximum levels of refinement
+     minlevel = 2         # Minimum level
+     maxlevel = 6         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
 
      outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
