Minor changes to Makefiles;  included change to setprob;  don't import module variablles that are not needed

--- a/applications/advection/2d/swirl/Makefile
+++ b/applications/advection/2d/swirl/Makefile
@@ -4,6 +4,7 @@ TARGET = swirl
 GEO = cart
 
 include $(FORESTCLAW)/Make.defs.local
+include Makefile.clawpack.inc
 
 # -----------------------------------------------------------
 FFLAGS = $(LOCAL_FFLAGS)
