Minor changes to example advection/no_solver to reflect latest code

--- a/applications/advection/2d/no_solver/fclaw2d_defaults.ini
+++ b/applications/advection/2d/no_solver/fclaw2d_defaults.ini
@@ -2,20 +2,18 @@
      mx = 8		  # mx_leaf
      my = 8               # my_leaf
 
-     ax = -1
-     bx = 1
-     ay = -1
-     by = 1
+     subcycle = T         # subcycle in time ( = T or F).
+     serialout = T
 
      minlevel = 3         # Minimum level
-     maxlevel = 5         # Maximum levels of refinement
-     regrid_interval = 0  # Regrid every 'regrid_interval' time steps.
+     maxlevel = 7         # Maximum levels of refinement
+     regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
 
-     outstyle = 3         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
-     nout = 80
+     outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
+     nout = 20
      nstep = 1            # Only used if outstyle is 3
 
-     tfinal = 5.0         #
+     tfinal = 4.0         #
 
 
      use_fixed_dt = F     # Take a fixed time step
@@ -27,6 +25,11 @@
      mbc = 2              # mbc
      mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
 
+     ax = -1
+     bx = 1
+     ay = -1
+     by = 1
+
 #    Leave these as general parameters, since they may be used by several
 #    hyperbolic solvers
      max_cfl = 1.0        # maximum cfl
@@ -34,8 +37,6 @@
 
      manifold = F         # Manifold
      mapped = F
-
-     subcycle = T         # subcycle in time ( = T or F).
 
      check_conservation = F
 
