--- a/Makefile.apps
+++ b/Makefile.apps
@@ -8,12 +8,13 @@ include src/Makefile.am
 # ----------------------------------
 # Solver libraries
 # ----------------------------------
-include src/solvers/amr_waveprop/Makefile.am
+include src/solvers/fclaw2d_clawpack4.6/Makefile.am
 
 # ----------------------------------
 # Applications
 # ----------------------------------
-include applications/dummy/Makefile.am
+# include applications/dummy/Makefile.am
 include applications/advection/2d/swirl/Makefile.am
+include applications/advection/2d/no_solver/Makefile.am
 include applications/advection/2d/hemisphere/Makefile.am
-include applications/metric/2d/sphere/Makefile.am
+# include applications/metric/2d/sphere/Makefile.am
