--- a/applications/advection/2d/swirl/Makefile.am
+++ b/applications/advection/2d/swirl/Makefile.am
@@ -8,18 +8,18 @@ bin_PROGRAMS += applications/advection/2d/swirl/swirl
 applications_advection_2d_swirl_swirl_SOURCES = \
 	applications/advection/2d/swirl/swirl_user.cpp \
 	applications/advection/2d/swirl/swirl.cpp \
-	applications/advection/2d/swirl/ghost_twopatch.f \
-	applications/advection/2d/swirl/tag4refinement.f \
 	applications/advection/2d/swirl/psi.f \
-	applications/advection/2d/swirl/rpn2ad1.f \
-	applications/advection/2d/swirl/rpt2ad1.f \
-	applications/advection/2d/swirl/qinit.f \
-	applications/advection/2d/swirl/b4step2.f \
-	applications/advection/2d/swirl/setaux.f \
-	applications/advection/2d/swirl/setprob.f \
-	applications/advection/2d/swirl/swirl_output.f
+	applications/advection/2d/swirl/user_4.6/ghost_twopatch.f \
+	applications/advection/2d/swirl/user_4.6/tag4refinement.f \
+	applications/advection/2d/swirl/user_4.6/rpn2ad1.f \
+	applications/advection/2d/swirl/user_4.6/rpt2ad1.f \
+	applications/advection/2d/swirl/user_4.6/qinit.f \
+	applications/advection/2d/swirl/user_4.6/b4step2.f \
+	applications/advection/2d/swirl/user_4.6/setaux.f \
+	applications/advection/2d/swirl/user_4.6/setprob.f \
+	applications/advection/2d/swirl/user_4.6/swirl_output.f
 
 applications_advection_2d_swirl_swirl_CPPFLAGS = \
-	$(AM_CPPFLAGS) -I@top_srcdir@/src/solvers/amr_waveprop
+	$(AM_CPPFLAGS) -I@top_srcdir@/src/solvers/fclaw2d_clawpack4.6
 
-applications_advection_2d_swirl_swirl_LDADD = @top_builddir@/src/solvers/amr_waveprop/libwaveprop.la $(LDADD)
+applications_advection_2d_swirl_swirl_LDADD = @top_builddir@/src/solvers/fclaw2d_clawpack4.6/libclawpack46.la $(LDADD)
