--- a/src/solvers/fclaw2d_clawpack4.6/Makefile.am
+++ b/src/solvers/fclaw2d_clawpack4.6/Makefile.am
@@ -10,13 +10,14 @@
 ## been mentioned in bin_PROGRAMS for example.  Any variable used with +=
 ## must also first be initialized with = (usually to empty).
 
-libclawpack46_generated_headers =
-libclawpack46_installed_headers = fclaw2d_clawpack.H
+libclawpack4_6_generated_headers =
+libclawpack4_6_installed_headers = \
+	src/solvers/fclaw2d_clawpack4.6/fclaw2d_clawpack.H
 
 ## TODO: there could be a name conflict with multiple claw.i files present
-libclawpack46_internal_headers = src/solvers/fclaw2d_clawpack4.6/fortran_source/claw.i
+libclawpack4_6_internal_headers = src/solvers/fclaw2d_clawpack4.6/fortran_source/claw.i
 
-libclawpack46_compiled_sources = \
+libclawpack4_6_compiled_sources = \
 	src/solvers/fclaw2d_clawpack4.6/fclaw2d_clawpack.cpp \
 	src/solvers/fclaw2d_clawpack4.6/fortran_source/limiter.f \
 	src/solvers/fclaw2d_clawpack4.6/fortran_source/qinit.f \
@@ -29,15 +30,15 @@ libclawpack46_compiled_sources = \
 	src/solvers/fclaw2d_clawpack4.6/fortran_source/step2.f \
 	src/solvers/fclaw2d_clawpack4.6/fortran_source/ClawPatch2.f
 
-lib_LTLIBRARIES += @top_builddir@/src/solvers/fclaw2d_clawpack4.6/libclawpack46.la
+lib_LTLIBRARIES += src/solvers/fclaw2d_clawpack4.6/libclawpack4.6.la
 
-src_solvers_fclaw2d_clawpack4.6_libclawpack46_la_SOURCES = \
-  $(libclawpack46_internal_headers) \
-  $(libclawpack46_compiled_sources)
+src_solvers_fclaw2d_clawpack4_6_libclawpack4_6_la_SOURCES = \
+  $(libclawpack4_6_internal_headers) \
+  $(libclawpack4_6_compiled_sources)
 
-src_solvers_fclaw2d_clawpack4.6_libclawpack46_la_CPPFLAGS = $(AM_CPPFLAGS) $(FCLAW_CPPFLAGS)
+src_solvers_fclaw2d_clawpack4.6_libclawpack4.6_la_CPPFLAGS = $(AM_CPPFLAGS) $(FCLAW_CPPFLAGS)
 
-LDADD += @top_builddir@/src/solvers/fclaw2d_clawpack4.6/libclawpack46.la
+LDADD += @top_builddir@/src/solvers/fclaw2d_clawpack4.6/libclawpack4.6.la
 
 include_HEADERS += $(libclawpack4.6_installed_headers)
 
