Both swirl and hemisphere compile

--- a/applications/advection/2d/hemisphere/Makefile.am
+++ b/applications/advection/2d/hemisphere/Makefile.am
@@ -18,6 +18,8 @@ applications_advection_2d_hemisphere_hemisphere_SOURCES = \
 	applications/advection/2d/hemisphere/setprob.f
 
 applications_advection_2d_hemisphere_hemisphere_CPPFLAGS = \
-	$(AM_CPPFLAGS) -I@top_srcdir@/src/solvers/fclaw2d_clawpack4.6
+	$(FCLAW_CPPFLAGS) $(AM_CPPFLAGS)
 
-applications_advection_2d_hemisphere_hemisphere_LDADD = @top_builddir@/src/solvers/fclaw2d_clawpack4.6/libclawpack4.6.la $(LDADD)
+applications_advection_2d_hemisphere_hemisphere_LDADD = \
+	@top_builddir@/src/solvers/fclaw2d_clawpack4.6/libclawpack4.6.la \
+	$(LDADD)
