--- a/Makefile.am
+++ b/Makefile.am
@@ -59,10 +59,11 @@ DISTCLEANFILES += \
 
 # ------------------------------------------------------------------
 # non-recursive build
-# include src/Makefile.am
-# include applications/dummy/Makefile.am
-#
+include src/Makefile.am
+
 # include src/solvers/amr_waveprop/Makefile.am
+#
+# include applications/dummy/Makefile.am
 # include applications/advection/2d/swirl/Makefile.am
 # include applications/advection/2d/hemisphere/Makefile.am
 
