Straighten out makefile logic more

--- a/applications/advection/2d/hemisphere/Makefile.am
+++ b/applications/advection/2d/hemisphere/Makefile.am
@@ -1,10 +1,6 @@
 ## Makefile.am in applications/advection/2d/hemisphere
 
-
-
 bin_PROGRAMS += applications/advection/2d/hemisphere/hemisphere
-
-
 
 applications_advection_2d_hemisphere_hemisphere_SOURCES = \
 	applications/advection/2d/hemisphere/hemisphere_user.cpp \
@@ -21,10 +17,10 @@ applications_advection_2d_hemisphere_hemisphere_SOURCES = \
 	applications/advection/2d/hemisphere/setprob.f
 
 applications_advection_2d_hemisphere_hemisphere_CPPFLAGS = \
-	$(FCLAW_CPPFLAGS) $(AM_CPPFLAGS)
+        $(AM_CPPFLAGS) $(FCLAW_CLAWPACK46_CPPFLAGS)
 
-applications_advection_2d_hemisphere_hemisphere_FFLAGS = $(FCLAW_FFLAGS)
+# applications_advection_2d_hemisphere_hemisphere_FFLAGS = \
+#	$(AM_FFLAGS)
 
 applications_advection_2d_hemisphere_hemisphere_LDADD = \
-	@top_builddir@/src/solvers/fclaw2d_clawpack4.6/libclawpack4.6.la \
-	$(LDADD)
+        $(FCLAW_CLAWPACK46_LDADD) $(LDADD)
