--- a/applications/advection/2d/swirl/Makefile.am
+++ b/applications/advection/2d/swirl/Makefile.am
@@ -20,9 +20,8 @@ applications_advection_2d_swirl_swirl_SOURCES = \
 	applications/advection/2d/swirl/user_4.6/swirl_output.f
 
 applications_advection_2d_swirl_swirl_CPPFLAGS = \
-	$(FCLAW_CPPFLAGS) \
-	$(AM_CPPFLAGS)
+        $(AM_CPPFLAGS) $(FCLAW_CLAWPACK46_CPPFLAGS)
 
 applications_advection_2d_swirl_swirl_LDADD = \
-	@top_builddir@/src/solvers/fclaw2d_clawpack4.6/libclawpack4.6.la \
-	$(LDADD)
+        $(FCLAW_CLAWPACK46_LDADD) $(LDADD)
+## @top_builddir@/src/solvers/fclaw2d_clawpack4.6/libclawpack4.6.la
