--- a/src/solvers/fclaw2d_clawpack4.6/Makefile.am
+++ b/src/solvers/fclaw2d_clawpack4.6/Makefile.am
@@ -10,6 +10,7 @@
 ## been mentioned in bin_PROGRAMS for example.  Any variable used with +=
 ## must also first be initialized with = (usually to empty).
 
+## TODO: Preserve some subdirectory structure for the make install
 libclawpack4_6_generated_headers =
 libclawpack4_6_installed_headers = \
 	src/solvers/fclaw2d_clawpack4.6/fclaw2d_clawpack.H
@@ -41,7 +42,7 @@ src_solvers_fclaw2d_clawpack4_6_libclawpack4_6_la_SOURCES = \
 src_solvers_fclaw2d_clawpack4.6_libclawpack4.6_la_CPPFLAGS = \
   $(AM_CPPFLAGS) $(FCLAW_CPPFLAGS)
 
-## LDADD += @top_builddir@/src/solvers/fclaw2d_clawpack4.6/libclawpack4.6.la
-## AM_CPPFLAGS += -I@top_srcdir@/src/solvers/fclaw2d_clawpack4.6
+FCLAW_CLAWPACK46_CPPFLAGS = -I@top_srcdir@/src/solvers/fclaw2d_clawpack4.6
+FCLAW_CLAWPACK46_LDADD = @top_builddir@/src/solvers/fclaw2d_clawpack4.6/libclawpack4.6.la
 
 include_HEADERS += $(libclawpack4_6_installed_headers)
