Activate dummy application

--- a/applications/dummy/Makefile.am
+++ b/applications/dummy/Makefile.am
@@ -5,3 +5,6 @@ bin_PROGRAMS += applications/dummy/fclaw2d_dummy
 applications_dummy_fclaw2d_dummy_SOURCES = \
 	applications/dummy/fclaw2d_dummy.c \
 	applications/dummy/ghost_twopatch.f
+
+# TODO: we don't need this, but for testing activating this line should link
+# applications_dummy_fclaw2d_dummy_LDADD = $(FCLAW_CLAWPACK46_LDADD) $(LDADD)
