--- a/Makefile.apps
+++ b/Makefile.apps
@@ -9,7 +9,7 @@ include src/solvers/fclaw2d_clawpack4.6/Makefile.am
 # Applications
 # ----------------------------------
 
-# include applications/dummy/Makefile.am
+include applications/dummy/Makefile.am
 include applications/advection/2d/no_solver/Makefile.am
 
 include applications/advection/2d/swirl/Makefile.am
