--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -76,7 +76,7 @@ lib_LTLIBRARIES += src/libforestclaw.la
 src_libforestclaw_la_SOURCES = \
  $(libforestclaw_internal_headers) \
  $(libforestclaw_compiled_sources)
-src_libforestclaw_la_CPPFLAGS = $(AM_CPPFLAGS) $(FCLAW_CPPFLAGS)
+# src_libforestclaw_la_CPPFLAGS = $(AM_CPPFLAGS)
 LDADD += @top_builddir@/src/libforestclaw.la @FCLAW_P4EST_LDADD@ @FCLAW_SC_LDADD@
 EXTRA_src_libforestclaw_la_DEPENDENCIES = @FCLAW_P4EST_LDADD@ @FCLAW_SC_LDADD@
 
