--- a/Makefile.apps
+++ b/Makefile.apps
@@ -15,3 +15,4 @@ include applications/advection/2d/no_solver/Makefile.am
 include applications/advection/2d/swirl/Makefile.am
 include applications/advection/2d/hemisphere/Makefile.am
 include applications/advection/2d/sphere/Makefile.am
+include applications/advection/2d/cubed_sphere/Makefile.am
