Cubed sphere is now properly initialized

--- a/applications/advection/2d/cubed_sphere/Makefile.am
+++ b/applications/advection/2d/cubed_sphere/Makefile.am
@@ -8,6 +8,7 @@ applications_advection_2d_cubed_sphere_cubed_sphere_SOURCES = \
 	applications/advection/2d/cubed_sphere/ghost_twopatch.f \
 	applications/advection/2d/cubed_sphere/tag4refinement.f \
 	applications/advection/2d/cubed_sphere/mapc2m.f \
+	applications/advection/2d/cubed_sphere/mapc2m_cubed_sphere.f \
 	applications/advection/2d/cubed_sphere/velocity_wind.f \
 	applications/advection/2d/cubed_sphere/rpn2noncons.f \
 	applications/advection/2d/cubed_sphere/rpt2noncons.f \
