--- a/applications/advection/2d/cubed_sphere/fclaw2d_defaults.ini
+++ b/applications/advection/2d/cubed_sphere/fclaw2d_defaults.ini
@@ -1,8 +1,11 @@
 [Options]
-     mx = 8		  # mx_leaf
-     my = 8              # my_leaf
 
-     serialout = T
+     example = 2          # 2 creates a flat cubed disc, 3 the cubed sphere
+
+     mx = 8               # mx_leaf
+     my = 8               # my_leaf
+
+     serialout = T        # Set this to F for parallel runs.  T is dead slow.
 
      minlevel = 1         # Minimum level
      maxlevel = 5         # Maximum levels of refinement
@@ -14,7 +17,7 @@
      nstep = 1            # Only used if outstyle is 3
 
      use_fixed_dt = F     # Take a fixed time step
-     initial_dt = 0.02   # Initial time step for 'minlevel'
+     initial_dt = 0.02    # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
@@ -26,7 +29,6 @@
      mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
 
      manifold = T         # Manifold
-
 
      subcycle = T         # subcycle in time ( = T or F).
 
