--- a/applications/advection/2d/cubed_sphere/fclaw2d_defaults.ini
+++ b/applications/advection/2d/cubed_sphere/fclaw2d_defaults.ini
@@ -1,6 +1,8 @@
 [Options]
 
      example = 2          # 2 creates a flat cubed disc, 3 the cubed sphere
+     cubed_R1 = 1.        # outer radius of cubed disk and cubed sphere
+     cubed_R2 = .25       # circumcircle radius of inner cube of cubed disk
 
      mx = 8               # mx_leaf
      my = 8               # my_leaf
