More work on corner logic

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -52,6 +52,7 @@ libforestclaw_compiled_sources = \
 	src/amr_repartition_domain.cpp \
 	src/amr_exchangecoarse.cpp \
 	src/amr_levelexchange.cpp \
+	src/amr_corner_neighbors.cpp \
 	src/amr_mol.cpp \
 	src/amr_single_step.cpp \
 	src/amr_neighbors.cpp \
