Added to new c-style mappings

--- a/applications/advection/2d/cubed_sphere/Makefile.am
+++ b/applications/advection/2d/cubed_sphere/Makefile.am
@@ -5,6 +5,8 @@ bin_PROGRAMS += applications/advection/2d/cubed_sphere/cubed_sphere
 applications_advection_2d_cubed_sphere_cubed_sphere_SOURCES = \
 	applications/advection/2d/cubed_sphere/cubed_sphere_user.cpp \
 	applications/advection/2d/cubed_sphere/cubed_sphere.cpp \
+	applications/advection/2d/cubed_sphere/fclaw2d_map_cubedsphere.c \
+	applications/advection/2d/cubed_sphere/fclaw2d_map_pillowsphere.c \
 	applications/advection/2d/cubed_sphere/tag4refinement.f \
 	applications/advection/2d/cubed_sphere/mapc2m.f \
 	applications/advection/2d/cubed_sphere/velocity_wind.f \
