--- a/applications/advection/2d/filament/fclaw2d_defaults.ini
+++ b/applications/advection/2d/filament/fclaw2d_defaults.ini
@@ -1,19 +1,19 @@
 [Options]
-     mx = 16		  # mx_leaf
-     my = 16              # my_leaf
+     mx = 8		  # mx_leaf
+     my = 8              # my_leaf
 
      serialout = T
 
      subcycle = T         # subcycle in time ( = T or F).
 
-     minlevel = 2         # Minimum level
-     maxlevel = 5         # Maximum levels of refinement
+     minlevel = 0         # Minimum level
+     maxlevel = 0         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
 
-     outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
+     outstyle = 3         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
      tfinal = 8.0         #
 
-     nout = 32            # Used for all three out styles;  has different meaning, though.
+     nout = 200            # Used for all three out styles;  has different meaning, though.
      nstep = 1            # Only used if outstyle is 3
 
      use_fixed_dt = F     # Take a fixed time step
@@ -22,9 +22,9 @@
      verbosity = 0        # verbose
 
      ax = 0
-     bx = 2
+     bx = 1
      ay = 0
-     by = 2
+     by = 1
 
      meqn = 1             # meqn
 
@@ -36,7 +36,7 @@
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
-     manifold = F         # Manifold
+     manifold = T         # Manifold
      mapped = F
 
      check_conservation = T
