--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -59,6 +59,7 @@ libforestclaw_compiled_sources = \
 	src/amr_levelexchange.cpp \
 	src/fclaw2d_corner_neighbors.cpp \
 	src/fclaw2d_face_neighbors.cpp \
+	src/fclaw2d_fill_ghost.cpp \
 	src/amr_mol.cpp \
 	src/amr_single_step.cpp \
 	src/amr_timeinterp.cpp \
