--- a/applications/advection/2d/filament/Makefile.am
+++ b/applications/advection/2d/filament/Makefile.am
@@ -24,8 +24,7 @@ applications_advection_2d_filament_filament_SOURCES = \
 applications_advection_2d_filament_filament_CPPFLAGS = \
         $(AM_CPPFLAGS) $(FCLAW_CLAWPACK46_CPPFLAGS)
 
-# applications_advection_2d_filament_filament_CPPFLAGS += -D TRAPFPE
-# applications_advection_2d_filament_filament_CPPFLAGS += -D TRAPFPE_OSX
+applications_advection_2d_filament_filament_CPPFLAGS += -D TRAPFPE
 
 # applications_advection_2d_filament_filament_CPPFLAGS += -D MPI_DEBUG
 
