Updated call to rotation/shift/scale functions for mapping

--- a/applications/advection/2d/filament/fclaw2d_defaults.ini
+++ b/applications/advection/2d/filament/fclaw2d_defaults.ini
@@ -1,4 +1,8 @@
 [Options]
+
+     theta = 27
+     phi = 0
+
      mx = 8		  # mx_leaf
      my = 8               # my_leaf
 
@@ -6,8 +10,8 @@
 
      subcycle = T         # subcycle in time ( = T or F).
 
-     minlevel = 2         # Minimum level
-     maxlevel = 4         # Maximum levels of refinement
+     minlevel = 3         # Minimum level
+     maxlevel = 5         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
 
      outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
