--- a/applications/advection/2d/cubed_sphere/fclaw2d_defaults.ini
+++ b/applications/advection/2d/cubed_sphere/fclaw2d_defaults.ini
@@ -1,8 +1,8 @@
 [Options]
 
-     example = 2          # 2 creates a flat cubed disc, 3 the cubed sphere
-     theta = 0
-     phi = 103.13
+     example = 2          # 1 = pillowdisk;  2 = cubed_sphere
+     theta = 37         # Rotation angles (degrees)
+     phi = 102            # Rotation angle
 
 #    Mesh characteristics;  all of these can be changed at  the command line.
      mx = 8               # mx_leaf
@@ -10,7 +10,7 @@
 
      serialout = T        # Set this to F for parallel runs.  T is dead slow.
 
-     minlevel = 3         # Minimum level
+     minlevel = 2         # Minimum level
      maxlevel = 5        # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
 
