--- a/applications/advection/2d/filament/fclaw2d_defaults.ini
+++ b/applications/advection/2d/filament/fclaw2d_defaults.ini
@@ -1,16 +1,16 @@
 [Options]
 
-     theta = 27
+     theta = 297
      phi = 0
 
-     mx = 8		  # mx_leaf
-     my = 8               # my_leaf
+     mx = 16
+     my = 16		# my_leaf
 
      serialout = T
 
      subcycle = T         # subcycle in time ( = T or F).
 
-     minlevel = 3         # Minimum level
+     minlevel = 2         # Minimum level
      maxlevel = 5         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
 
@@ -26,9 +26,9 @@
      verbosity = 0        # verbose
 
      ax = 0
-     bx = 1
+     bx = 2
      ay = 0
-     by = 1
+     by = 2
 
      meqn = 1             # meqn
 
@@ -40,8 +40,7 @@
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
-     manifold = T         # Manifold
-     mapped = F
+     manifold = F         # Manifold
 
      check_conservation = T
 
