Figure out why Cartesian grid does not work

--- a/applications/advection/2d/filament/fclaw2d_defaults.ini
+++ b/applications/advection/2d/filament/fclaw2d_defaults.ini
@@ -40,24 +40,6 @@
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
-     manifold = F         # Manifold
+     manifold = T         # Manifold
 
      check_conservation = T
-
-# ----------------------------------------------------------------------------------
-# All output styles below can use either a fixed time step or a variable time step.
-
-[OutputStyle_1]
-# Create nout+1 output files at times  [0,dT_out, 2*dT_out, ..., tfinal], where dT_out = tfinal/nout
-     nout = 10
-     tfinal = 4.0
-
-[OutputStyle_2]
-# Create nout+1 output files at times specified in t_out (T=0 file included by default)
-  nout = 6
-  tout = 0.1 0.34 0.5 0.89 1.1 2.1;
-
-[OutputStyle_3]
-# Output every nstep time steps, for nout total time steps.  Note that nstep must divide nout.
-  nstep = 1
-  nout = 5
