Default is now squared disk mapping

--- a/applications/advection/2d/filament/fclaw2d_defaults.ini
+++ b/applications/advection/2d/filament/fclaw2d_defaults.ini
@@ -1,10 +1,11 @@
 [Options]
 
+     example=2
      theta = 297
      phi = 0
 
-     mx = 16
-     my = 16		# my_leaf
+     mx = 8
+     my = 8		# my_leaf
 
      serialout = T
 
