--- a/applications/advection/2d/filament/Makefile.am
+++ b/applications/advection/2d/filament/Makefile.am
@@ -19,6 +19,7 @@ applications_advection_2d_filament_filament_SOURCES = \
 	applications/advection/2d/filament/user_4.6/rpt2noncons.f \
 	applications/advection/2d/filament/user_4.6/qinit.f \
 	applications/advection/2d/filament/user_4.6/setaux_manifold.f \
+	applications/advection/2d/filament/user_4.6/setaux_nomap.f \
 	applications/advection/2d/filament/user_4.6/filament_output.f
 
 
