--- a/applications/advection/2d/swirl_fivepatch/fclaw2d_defaults.ini
+++ b/applications/advection/2d/swirl_fivepatch/fclaw2d_defaults.ini
@@ -6,8 +6,8 @@
 
      subcycle = T         # subcycle in time ( = T or F).
 
-     minlevel = 0         # Minimum level
-     maxlevel = 0         # Maximum levels of refinement
+     minlevel = 2         # Minimum level
+     maxlevel = 5         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
 
      outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
@@ -31,25 +31,6 @@
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
-     manifold = F         # Manifold
-     mapped = F
+     manifold = T         # Manifold
 
      check_conservation = F
-
-# ----------------------------------------------------------------------------------
-# All output styles below can use either a fixed time step or a variable time step.
-
-[OutputStyle_1]
-# Create nout+1 output files at times  [0,dT_out, 2*dT_out, ..., tfinal], where dT_out = tfinal/nout
-     nout = 10
-     tfinal = 4.0
-
-[OutputStyle_2]
-# Create nout+1 output files at times specified in t_out (T=0 file included by default)
-  nout = 6
-  tout = 0.1 0.34 0.5 0.89 1.1 2.1;
-
-[OutputStyle_3]
-# Output every nstep time steps, for nout total time steps.  Note that nstep must divide nout.
-  nstep = 1
-  nout = 5
