--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -39,12 +39,13 @@ libforestclaw_compiled_sources = \
 	src/mappings/block.f \
 	src/mappings/context.f \
 	src/mappings/scale_rot_map.f \
+	src/mappings/map_query.f \
 	src/mappings/cart/mapc2m_cart.f \
 	src/mappings/pillowdisk/mapc2m_pillowdisk.f \
 	src/mappings/squareddisk/mapc2m_squareddisk.f \
-	src/mappings/map_query.f \
 	src/mappings/cubedsphere/mapc2m_cubedsphere.f \
 	src/mappings/pillowsphere/mapc2m_pillowsphere.f \
+	src/mappings/fivepatch/mapc2m_fivepatch.f \
 	src/mappings/pillowsphere/pillowsphere_corner_ghost.f \
 	src/clawpack_fort.cpp \
 	src/ClawPatch.cpp \
