get new build system and mapping setup for swirl

--- a/Makefile.apps
+++ b/Makefile.apps
@@ -13,6 +13,7 @@ include applications/dummy/Makefile.am
 include applications/advection/2d/no_solver/Makefile.am
 
 include applications/advection/2d/swirl_fivepatch/Makefile.am
+include applications/advection/2d/swirl/Makefile.am
 include applications/advection/2d/hemisphere/Makefile.am
 include applications/advection/2d/sphere/Makefile.am
 include applications/advection/2d/cubed_sphere/Makefile.am
