--- a/applications/advection/2d/swirl/Makefile.am
+++ b/applications/advection/2d/swirl/Makefile.am
@@ -8,8 +8,8 @@ bin_PROGRAMS += applications/advection/2d/swirl/swirl
 applications_advection_2d_swirl_swirl_SOURCES = \
 	applications/advection/2d/swirl/swirl_user.cpp \
 	applications/advection/2d/swirl/swirl.cpp \
+	applications/advection/2d/swirl/fclaw2d_map_nomap.c \
 	applications/advection/2d/swirl/psi.f \
-	applications/advection/2d/swirl/user_4.6/ghost_twopatch.f \
 	applications/advection/2d/swirl/user_4.6/tag4refinement.f \
 	applications/advection/2d/swirl/user_4.6/rpn2ad1.f \
 	applications/advection/2d/swirl/user_4.6/rpt2ad1.f \
@@ -21,6 +21,10 @@ applications_advection_2d_swirl_swirl_SOURCES = \
 
 applications_advection_2d_swirl_swirl_CPPFLAGS = \
         $(AM_CPPFLAGS) $(FCLAW_CLAWPACK46_CPPFLAGS)
+
+applications_advection_2d_swirl_swirl_CPPFLAGS += -D TRAPFPE
+
+# applications_advection_2d_swirl_swirl_CPPFLAGS += -D MPI_DEBUG
 
 applications_advection_2d_swirl_swirl_LDADD = \
         $(FCLAW_CLAWPACK46_LDADD) $(LDADD)
