Renamed 'cubed_sphere' example to 'sphere';  original sphere is deleted

--- a/applications/advection/2d/sphere/fclaw2d_defaults.ini
+++ b/applications/advection/2d/sphere/fclaw2d_defaults.ini
@@ -1,11 +1,17 @@
 [Options]
-     mx = 8		  # mx_leaf
-     my = 8              # my_leaf
 
-     serialout = T
+     example = 2          # 1 = pillowsphere;  2 = cubed_sphere
+     theta = 37           # Rotation angles (degrees)
+     phi = 102            # Rotation angle
 
-     minlevel = 1         # Minimum level
-     maxlevel = 5         # Maximum levels of refinement
+#    Mesh characteristics;  all of these can be changed at  the command line.
+     mx = 8               # mx_leaf
+     my = 8               # my_leaf
+
+     serialout = T        # Set this to F for parallel runs.  T is dead slow.
+
+     minlevel = 2         # Minimum level
+     maxlevel = 5        # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
 
      outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
@@ -14,7 +20,7 @@
      nstep = 1            # Only used if outstyle is 3
 
      use_fixed_dt = F     # Take a fixed time step
-     initial_dt = 0.02   # Initial time step for 'minlevel'
+     initial_dt = 0.02    # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
@@ -27,25 +33,6 @@
 
      manifold = T         # Manifold
 
-
      subcycle = T         # subcycle in time ( = T or F).
 
      check_conservation = F
-
-# ----------------------------------------------------------------------------------
-# All output styles below can use either a fixed time step or a variable time step.
-
-[OutputStyle_1]
-# Create nout+1 output files at times  [0,dT_out, 2*dT_out, ..., tfinal], where dT_out = tfinal/nout
-     nout = 10
-     tfinal = 4.0
-
-[OutputStyle_2]
-# Create nout+1 output files at times specified in t_out (T=0 file included by default)
-  nout = 6
-  tout = 0.1 0.34 0.5 0.89 1.1 2.1;
-
-[OutputStyle_3]
-# Output every nstep time steps, for nout total time steps.  Note that nstep must divide nout.
-  nstep = 1
-  nout = 5
