--- a/applications/advection/2d/hemisphere/fclaw2d_defaults.ini
+++ b/applications/advection/2d/hemisphere/fclaw2d_defaults.ini
@@ -1,15 +1,19 @@
 [Options]
+
+     example = 1
+     theta = 0
+
      mx = 8		  # mx_leaf
      my = 8              # my_leaf
 
      serialout = T
 
-     minlevel = 1         # Minimum level
-     maxlevel = 5         # Maximum levels of refinement
+     minlevel = 2         # Minimum level
+     maxlevel = 6         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
 
-     outstyle = 3         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
-     nout = 10            # Used for all three out styles;  has different meaning, though.
+     outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
+     nout = 20            # Used for all three out styles;  has different meaning, though.
      tfinal = 5.0         #
      nstep = 1            # Only used if outstyle is 3
 
@@ -31,21 +35,3 @@
      subcycle = T         # subcycle in time ( = T or F).
 
      check_conservation = F
-
-# ----------------------------------------------------------------------------------
-# All output styles below can use either a fixed time step or a variable time step.
-
-[OutputStyle_1]
-# Create nout+1 output files at times  [0,dT_out, 2*dT_out, ..., tfinal], where dT_out = tfinal/nout
-     nout = 10
-     tfinal = 4.0
-
-[OutputStyle_2]
-# Create nout+1 output files at times specified in t_out (T=0 file included by default)
-  nout = 6
-  tout = 0.1 0.34 0.5 0.89 1.1 2.1;
-
-[OutputStyle_3]
-# Output every nstep time steps, for nout total time steps.  Note that nstep must divide nout.
-  nstep = 1
-  nout = 5
