--- a/Makefile.apps
+++ b/Makefile.apps
@@ -9,9 +9,11 @@ include src/solvers/fclaw2d_clawpack4.6/Makefile.am
 # Applications
 # ----------------------------------
 
+# simple examples that don't do anything
 include applications/dummy/Makefile.am
 include applications/no_solver/Makefile.am
 
+# Scalar advection examples
 include applications/advection/2d/swirl_fivepatch/Makefile.am
 include applications/advection/2d/swirl/Makefile.am
 include applications/advection/2d/hemisphere/Makefile.am
