added default example

--- a/applications/advection/2d/swirl_fivepatch/fclaw2d_defaults.ini
+++ b/applications/advection/2d/swirl_fivepatch/fclaw2d_defaults.ini
@@ -1,5 +1,6 @@
 [Options]
-     mx = 8		  # mx_leaf
+     example = 1         # 1=Cartesian mapping; 2=five patch mapping
+     mx = 8		 # mx_leaf
      my = 8              # my_leaf
 
      serialout = T
