--- a/applications/no_solver/Makefile.am
+++ b/applications/no_solver/Makefile.am
@@ -8,6 +8,9 @@ bin_PROGRAMS += applications/no_solver/no_solver
 applications_no_solver_no_solver_SOURCES = \
 	applications/no_solver/no_solver.cpp \
 	applications/no_solver/no_solver_user.cpp \
+	applications/no_solver/fclaw2d_map_nomap.c \
+	applications/no_solver/fclaw2d_map_cart.c \
+	applications/no_solver/fclaw2d_map_fivepatch.c \
 	applications/no_solver/tag4refinement.f \
 	applications/no_solver/initialize.f
 
