--- a/applications/no_solver/fclaw2d_defaults.ini
+++ b/applications/no_solver/fclaw2d_defaults.ini
@@ -1,16 +1,19 @@
 [Options]
+
+     example = 0
+
      mx = 8		  # mx_leaf
      my = 8               # my_leaf
 
      subcycle = T         # subcycle in time ( = T or F).
      serialout = T
 
-     minlevel = 3         # Minimum level
-     maxlevel = 7         # Maximum levels of refinement
+     minlevel = 2         # Minimum level
+     maxlevel = 6         # Maximum levels of refinement
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
 
      outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
-     nout = 20
+     nout = 16
      nstep = 1            # Only used if outstyle is 3
 
      tfinal = 4.0         #
@@ -35,7 +38,7 @@
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
-     manifold = F         # Manifold
+     manifold = T         # Manifold
      mapped = F
 
      check_conservation = F
