--- a/applications/advection/2d/sphere/Makefile.am
+++ b/applications/advection/2d/sphere/Makefile.am
@@ -20,10 +20,8 @@ applications_advection_2d_sphere_sphere_SOURCES = \
 applications_advection_2d_sphere_sphere_CPPFLAGS = \
         $(AM_CPPFLAGS) $(FCLAW_CLAWPACK46_CPPFLAGS)
 
-applications_advection_2d_sphere_sphere = -D TRAPFPE
+applications_advection_2d_sphere_sphere_CPPFLAGS += -D TRAPFPE
 
-# applications_advection_2d_sphere_sphere_FFLAGS = \
-#	$(AM_FFLAGS)
 
 applications_advection_2d_sphere_sphere_LDADD = \
         $(FCLAW_CLAWPACK46_LDADD) $(LDADD)
