Fixed up mappings so they have standard scale/shift/rotate argument list

--- a/applications/no_solver/Makefile.am
+++ b/applications/no_solver/Makefile.am
@@ -11,6 +11,8 @@ applications_no_solver_no_solver_SOURCES = \
 	applications/no_solver/fclaw2d_map_nomap.c \
 	applications/no_solver/fclaw2d_map_cart.c \
 	applications/no_solver/fclaw2d_map_fivepatch.c \
+	applications/no_solver/fclaw2d_map_pillowdisk.c \
+	applications/no_solver/fclaw2d_map_pillowfivepatch.c \
 	applications/no_solver/tag4refinement.f \
 	applications/no_solver/initialize.f
 
